--- a/.nginx/orari-main.conf
+++ b/.nginx/orari-main.conf
@@ -5,6 +5,6 @@ server{
     }
     location / {
         include proxy_params;
-        proxy_params http://unix:/run/gunicorn.sock;
+        proxy_pass http://unix:/run/gunicorn.sock;
     }
 }
